Fix double scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@
 html,
 body {
   min-height: 100%;
+  overflow-x: clip;
 }
 
 html {
